RESOLVED FIXED110886
[BlackBerry] Animated images not animating on accelerated compositing layers
https://bugs.webkit.org/show_bug.cgi?id=110886
Summary [BlackBerry] Animated images not animating on accelerated compositing layers
Andrew Lo
Reported 2013-02-26 09:11:00 PST
Animated GIFs placed on AC layers are not animating.
Attachments
Patch (1.95 KB, patch)
2013-02-26 09:28 PST, Andrew Lo
no flags
Andrew Lo
Comment 1 2013-02-26 09:28:36 PST
Rob Buis
Comment 2 2013-02-26 09:30:10 PST
Comment on attachment 190304 [details] Patch LGTM.
WebKit Review Bot
Comment 3 2013-02-26 11:36:24 PST
Comment on attachment 190304 [details] Patch Rejecting attachment 190304 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', '--bot-id=gce-cq-01', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 190304, '--port=chromium-xvfb']" exit_code: 2 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: fatal: read error: Connection reset by peer Died at Tools/Scripts/update-webkit line 151. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource fatal: read error: Connection reset by peer Died at Tools/Scripts/update-webkit line 151. Failed to run "['Tools/Scripts/update-webkit', '--chromium', '--force-update']" exit_code: 2 Updating OpenSource fatal: read error: Connection reset by peer Died at Tools/Scripts/update-webkit line 151. Full output: http://webkit-commit-queue.appspot.com/results/16774353
WebKit Review Bot
Comment 4 2013-02-26 12:15:29 PST
Comment on attachment 190304 [details] Patch Clearing flags on attachment: 190304 Committed r144085: <http://trac.webkit.org/changeset/144085>
WebKit Review Bot
Comment 5 2013-02-26 12:15:32 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.