[BlackBerry] Animated images not animating on accelerated compositing layers https://bugs.webkit.org/show_bug.cgi?id=110886

Patch by Andrew Lo <anlo@rim.com> on 2013-02-26
Reviewed by Rob Buis.

Internally reviewed by Arvid Nilsson.
Internal PR 299598.

Animated images on AC layers call GraphicsLayer::setContentsToImage
on each frame with the same Image.

We need to set needs display in that case so that the frames are
displayed.

No new tests are needed since there is no new functionality.

* platform/graphics/blackberry/LayerWebKitThread.cpp:
(WebCore::LayerWebKitThread::setContents):

Canonical link: https://commits.webkit.org/129188@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144085 268f45cc-cd09-0410-ab3c-d52691b4dbfc